--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "image-type": "^5.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
