--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "pg-promise": "^11.0.2",
